2006-08-01  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-session.cc (run_child): Use the chroot
	environment_filter when setting the chroot execution environment.

2006-08-01  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-chroot.cc: Add environment_filter test.

	* sbuild/sbuild-chroot.cc
	(get_environment_filter): New method.  Get the environment filter
	regex.
	(set_environment_filter): New method.  Set the environment filter
	regex.
	(get_details): Add "Environment Filter" line.
	(get_keyfile): Set "environment-filter" key.
	(set_keyfile): Get "environment-filter" key.

	* sbuild/sbuild-chroot.h: Add environment_filter member, a regular
	expression to filter the environment inside the chroot.

2006-08-01  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-environment.cc: Add regex filter tests.

	* sbuild/sbuild-environment.cc
	(set_filter): New method.  Set filter regex.
	(get_filter): New method.  Get filter regex.
	(add): Check environment variable name does not match the regex
	before adding it.

	* sbuild/sbuild-environment.h: Add filter member, a regular
	expression to filter the environment.  All operators take a const
	reference as the right-hand side argument.

2006-08-01  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-run-parts.cc
	(check_filename): Use sbuild::regex in place of boost::regex.

2006-08-01  Roger Leigh  <rleigh@debian.org>

	* test/Makefile.am (TESTS): Add sbuild-regex.

	* test/sbuild-regex.cc: New file.  sbuild::regex unit tests.

	* sbuild/Makefile.am
	(sbuild_public_h_sources): Add sbuild-regex.h.

	* sbuild/sbuild-regex.h: New file.  POSIX extended regular
	expression class, based on boost::regex.  It supports input and
	output from streams.

2006-08-01  Luk Claes  <luk@debian.org>

	* po/cs.po: Update Czech translation.

2006-07-31  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-chroot-config.cc: Use "by", rather than "with"
	when referring to chroot name.

2006-07-31  Roger Leigh  <rleigh@debian.org>
